<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:noghteh="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lighter_blue"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="aim.aiminmed.server.aimarm.time_select">




    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="INSTRUCTIONS TO USE"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/note1"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note2"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note3"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note4"
                android:textSize="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note5"
                android:textSize="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/note6"
                android:textSize="15dp" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >
                <TableRow android:background="#7a9acc" android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Sphincter Pressure" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:text="Females" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="Males" />
                </TableRow>
                <TableRow android:background="#DAE8FC" android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Reating mm Hg" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:textAlignment="center"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="40 - 60" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"

                        android:layout_weight="1"
                        android:text="60" />
                </TableRow>
                <TableRow android:background="#DAE8FC" android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Squeeze mm Hg" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"

                        android:text="100" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="150" />
                </TableRow>
                <TableRow android:background="#DAE8FC" android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Cough Reflex mm Hg" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:text="150" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:text="160" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TO PERFORM A TEST"
                android:layout_marginTop="30dp"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note7"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note8"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note9"
                android:textSize="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note10"
                android:textSize="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note11"
                android:textSize="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="STEPS for the TEST"
                android:layout_marginTop="30dp"
                android:textSize="30dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note12"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note13"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note14"
                android:textSize="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dp"
                android:text="@string/note15"
                android:textSize="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/note16"
                android:layout_marginLeft="10dp"
                android:textSize="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/note17"
                android:layout_marginLeft="10dp"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <info.hoang8f.widget.FButton
                    android:id="@+id/nxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:minWidth="@dimen/demo_button_min_width"
                    android:minHeight="@dimen/demo_button_min_height"
                    android:text="Biofeed"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    fbutton:buttonColor="@color/fbutton_color_peter_river"
                    fbutton:shadowEnabled="true" />

                <info.hoang8f.widget.FButton
                    android:id="@+id/nxt2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:minWidth="@dimen/demo_button_min_width"
                    android:minHeight="@dimen/demo_button_min_height"
                    android:text="SphinctoMeter"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    fbutton:buttonColor="@color/fbutton_color_peter_river"
                    fbutton:shadowEnabled="true" />

            </LinearLayout>
        </LinearLayout>



    </ScrollView>
</LinearLayout>
